refactor: rewrite message utils with modern Java 25 APIs
- CC: consolidated hex translation, captured regex group directly, used var
- Clickable: streamlined append logic, used array constructor ref
- DateTimeFormats: replaced FastDateFormat with java.time.DateTimeFormatter,
  replaced anonymous ThreadLocal with withInitial(), removed commons-lang3
  and Guava Preconditions dependencies
- FormatUtil: converted empty enum to final class, replaced Guava Joiner
  with String.join(), Guava ImmutableMap references removed, used
  StringBuilder throughout instead of string concatenation in loops,
  added NavigableMap typing, used String.formatted() for TPS formatting
- ItemNameUtil: replaced Guava ImmutableMap with Map.ofEntries(), inlined
  capitalizeFully to remove commons-lang3 WordUtils dependency
- ProgressionBar: replaced Guava Strings.repeat() with String.repeat(),
  used Math.clamp() (Java 21+)
- TimeUtil: replaced java.sql.Timestamp with java.time.Instant,
  pre-compiled TIME_SEGMENT pattern (was recompiled per call),
  replaced DurationFormatUtils with inline formatting,
  used switch expressions with arrow syntax, added StringBuilder
  for all time formatting methods, extracted pluralize() helper
- Center: replaced char array iteration with charAt(), computed
  padding with String.repeat() and Math.max(), made class final
- DefaultFontInfo: added O(1) character lookup Map replacing O(n) scan,
  fixed RIGHT_PARENTHESIS typo

All 9 files compile cleanly against Paper 26.1.2+ with JDK 25.
Cross-version Bukkit API compatibility preserved (ChatColor,
BungeeCord chat components, Player.spigot()).

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>